--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
       <nav role="navigation" aria-label="Main navigation">
         <ul class="nav-list">
           <li><a href="#destinations" data-section="destinations">Destinations</a></li>
-          <li><a href="#how-to-go" data-section="how-to-go">How to Go</a></li>
-          <li><a href="#food" data-section="food">What to Eat</a></li>
+          <li><a href="#how-to-go" data-section="how-to-go">Transport</a></li>
+          <li><a href="#food" data-section="food">Foodie</a></li>
           <li><a href="#gallery" data-section="gallery">Gallery</a></li>
           <li><a href="planner.html" class="nav-cta">Trip Planner</a></li>
         </ul>
